RESOLVED FIXED234651
Modal container control classifier fails on some neutral controls that contain multiplication symbols
https://bugs.webkit.org/show_bug.cgi?id=234651
Summary Modal container control classifier fails on some neutral controls that contai...
Wenson Hsieh
Reported 2021-12-23 14:46:08 PST
.
Attachments
Patch (18.00 KB, patch)
2021-12-23 14:57 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-12-23 14:57:52 PST
Wenson Hsieh
Comment 2 2021-12-23 20:54:39 PST
Comment on attachment 447911 [details] Patch Thanks for the review!
EWS
Comment 3 2021-12-23 21:20:54 PST
Committed r287420 (245555@main): <https://commits.webkit.org/245555@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 447911 [details].
Radar WebKit Bug Importer
Comment 4 2021-12-23 21:21:17 PST
Note You need to log in before you can comment on or make changes to this bug.