Modal container control classifier fails on some neutral controls that contain multiplication symbols https://bugs.webkit.org/show_bug.cgi?id=234651

Reviewed by Tim Horton.

Source/WebKit:

Treat several ASCII symbols that resemble the letter "x" (i.e. several types of multiplication signs) as the
letter "x" when massaging the raw text content of controls in modal containers into canonical form for the text
classifier. This allows such controls to be (correctly) tagged as "neutral" controls, for the purposes of
delegating modal container policy decisions to the WebKit client.

Test: ModalContainerObservation.ClassifyMultiplySymbol

* UIProcess/Cocoa/ModalContainerControlClassifier.mm:
(-[WKModalContainerClassifierInput initWithTokenizer:rawInput:]):
(WebKit::computePredictions):

Tools:

Add a new API test to exercise the change.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit/modal-container-custom.html: Added.

Add an alternate version of `modal-container.html` that allows each API test to present custom markup (as
innerHTML) inside a fixed position modal container; use this test page in the new API test.

* TestWebKitAPI/Tests/WebKitCocoa/ModalContainerObservation.mm:
(-[ModalContainerWebView loadBundlePage:andDecidePolicy:]):
(-[ModalContainerWebView evaluate:andDecidePolicy:]):
(-[ModalContainerWebView loadBundlePage:]):
(-[ModalContainerWebView _webView:decidePolicyForModalContainer:decisionHandler:]):
(-[ModalContainerWebView lastModalContainerInfo]):

Add a property to keep track of the most recent _WKModalContainerInfo we recieved via the modal container
decision handler, and use this to test for which types of controls are available, in both the new test as well
as existing tests.

(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKitCocoa/TestModalContainerControls.mlmodelc/analytics/coremldata.bin:
* TestWebKitAPI/Tests/WebKitCocoa/TestModalContainerControls.mlmodelc/coremldata.bin:

Adjust the test CoreML model to classify "x" as the neutral control type.



Canonical link: https://commits.webkit.org/245555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287420 268f45cc-cd09-0410-ab3c-d52691b4dbfc